--- a/battle.html
+++ b/battle.html
@@ -2437,15 +2437,8 @@ slot.card.attacks.forEach((attack, attackIndex) => {
 
       // Evaluate all available attacks for the current card
       slot.card.attacks.forEach((attack, attackIdx) => {
-  // Initialize cooldowns if needed
-  if (!slot.attackCooldowns) {
-    slot.attackCooldowns = {};
-  }
-  
-  // Skip if on cooldown (explicitly check > 0)
-  if ((slot.attackCooldowns[attackIdx] || 0) > 0) {
-    return;
-  }
+        // STRICT COOLDOWN CHECK - skip if on cooldown
+        if (isAttackOnCooldown(slot, attackIdx)) return;
 
         const validTargets = getValidTargets(attackerIdx, attack.pattern, 'computer');
         validTargets.forEach(targetIdx => {
@@ -2576,6 +2569,7 @@ slot.card.attacks.forEach((attack, attackIndex) => {
         }, animTiming * 0.6);
 
         setTimeout(() => {
+            updateSlotUI('computer', attackerIdx);
             attackerCardEl.classList.remove(animationClass);
         }, animTiming);
 
@@ -3309,12 +3303,8 @@ function updateCardHPBar(hpBarElement, currentHP, maxHP) {
         const attackCooldowns = {};
         card.attacks.forEach((attack, attackIdx) => {
           if(attack.effect && ['stun', 'sleep', 'poison'].includes(attack.effect)) {
-  if(!attacker.attackCooldowns) attacker.attackCooldowns = {};
-  
-  // Explicitly set the cooldown using the correct index
-  attacker.attackCooldowns[attackIdx] = BASE_COOLDOWN;
-  console.log(`Set cooldown for ${attacker.card.name}'s ${attack.name} to ${BASE_COOLDOWN}`);
-}
+            attackCooldowns[attackIdx] = 0;
+          }
         });
         
         computerSlots[slotIdx] = { 
