--- a/battle.html
+++ b/battle.html
@@ -342,7 +342,7 @@ html,body{
 }
 
 html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monospace;background:linear-gradient(135deg,var(--bg1),var(--bg2),var(--bg3));color:#fff;overflow-x:hidden;overflow-y:auto;}
-.wrap{position:relative;width:100%;height:100%;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding=14px;box-sizing:border-box}
+.wrap{position:relative;width:100%;height:100%;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:14px;box-sizing:border-box}
 .header{width:100%;text-align:center;margin-bottom:8px;z-index:5}
 .title{color:var(--accent);font-size:18px;text-shadow:0 0 6px rgba(0,0,0,.6)}
 .arena{position:relative;flex:1;width:100%;max-width:1100px;display:flex;flex-direction:column;gap:12px;align-items:center;justify-content:space-between;padding:12px;box-sizing:border-box}
@@ -2852,7 +2852,6 @@ function performComputerActions() {
   } else {
     performComputerDefend(bestMove.attackerIdx);
   }
-
   setTimeout(performComputerActions, 1800);
   }
 
@@ -4217,7 +4216,7 @@ function collapseCard() {
 
 // Initialize touch listeners after DOM is ready
 addTouchHoldListeners();
-})(document);
+})();
 </script>
 <style>
 /* === Additive visual override: full-image cards (non-destructive) === */
